# policies

.github/: release-drafter-allow-privilege-escalation-psp-policy.yml  release-drafter-allowed-fsgroups-psp-policy.yml  release-drafter-allowed-proc-mount-types-psp-policy.yml  release-drafter-annotations-policy.yml  release-drafter-apparmor-psp-policy.yml  release-drafter-capabilities-psp-policy.yml  release-drafter-cel-policy.yml  release-drafter-container-resources-policy.yml  release-drafter-context-aware-demo.yml  release-drafter-deprecated-api-versions-policy.yml  release-drafter-disallow-service-loadbalancer-policy.yml  release-drafter-disallow-service-nodeport-policy.yml  release-drafter-do-not-expose-admission-controller-webhook-services-policy.yml  release-drafter-echo.yml  release-drafter-env-variable-secrets-scanner-policy.yml  release-drafter-environment-variable-policy.yml  release-drafter-flexvolume-drivers-psp-policy.yml  release-drafter-go-wasi-context-aware-test-policy.yml  release-drafter-high-risk-service-account-policy.yml  release-drafter-host-namespaces-psp-policy.yml  release-drafter-hostpaths-psp-policy.yml  release-drafter-image-cve-policy.yml  release-drafter-ingress-policy.yml  release-drafter-kyverno-dsl-policy.yml  release-drafter-labels-policy.yml  release-drafter-namespace-label-propagator-policy.yml  release-drafter-persistentvolumeclaim-storageclass-policy.yml  release-drafter-pod-ndots-policy.yml  release-drafter-pod-privileged-policy.yml  release-drafter-pod-runtime-class-policy.yml  release-drafter-priority-class-policy.yml  release-drafter-probes-policy.yml  release-drafter-psa-label-enforcer-policy.yml  release-drafter-rancher-project-propagate-labels.yml  release-drafter-rancher-project-quotas-namespace-validator.yml  release-drafter-raw-mutation-policy.yml  release-drafter-raw-mutation-wasi-policy.yml  release-drafter-raw-validation-opa-policy.yml  release-drafter-raw-validation-policy.yml  release-drafter-raw-validation-wasi-policy.yml  (+15 more)
.github/workflows/: auto-labeler.yaml  ci-crates.yaml  release.yml  (+1 more)
policies/: Cargo.toml  Makefile.tinygo
policies/image-cve-policy/: Cargo.toml  README.md
policies/image-cve-policy/src/: lib.rs  settings.rs
policies/trusted-repos-policy/: Cargo.toml  README.md  e2e.bats  metadata.yml  questions-ui.yml
policies/trusted-repos-policy/src/: lib.rs  settings.rs  validation.rs
policies/trusted-repos-policy/test_data/: pod_bitnami_redis.json  pod_corp_registry.json  pod_ghcr_org.json  pod_rc_tag.json
policies/verify-image-signatures/src/: lib.rs
(+1 files in other folders)
