[package]
name = "trusted-repos-policy"
version = "2.0.6"
authors = ["Kubewarden Developers <cncf-kubewarden-maintainers@lists.cncf.io>"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
k8s-openapi = { workspace = true }
kubewarden-policy-sdk = { workspace = true }
lazy_static = { workspace = true }
oci-spec = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
slog = { workspace = true }
wildmatch = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
